# sm64-crypto

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  blah.m64  index.html  install.sh  play_game.sh  readme.md  sm64config.txt  windows_install.bat  windows_play_game.bat
.github/workflows/: node.js.yml
blockchain/: Cargo.toml
blockchain/src/: blockchain_client.rs  config.rs  lib.rs
blockchain/src/blockchain_client/: blockchain.rs
blockchain/src/blockchain_client/blockchain/: block.rs  ticket.rs
browser-wasm/: Cargo.toml
browser-wasm/src/: lib.rs
cli/: Cargo.toml
cli/src/: blockchain.rs  main.rs  use_exes.rs
cli/src/blockchain/: use_exes.rs
frontend/: .gitignore  index.html  index.js  package-lock.json  package.json  solution_22.js  vite.config.js
frontend/src/: App.css  App.jsx  index.js
frontend/src/assets/pkg/: sm64.us.js  sm64_headless.us.js
frontend/src/components/: AppNavbar.jsx  BlockWindow.jsx  CopyButton.jsx  FileUpload.jsx  InviteButton.jsx  Loading.css  Loading.jsx  MiningWindow.jsx
frontend/src/context/: BlockchainContext.jsx
frontend/src/pages/: Explorer.jsx  Game.jsx  Home.jsx  Mine.jsx
frontend/src/scripts/: fileUpload.js
frontend/src/scripts/sm64/: Sm64Game.js  randomConfig.js
frontend/src/scripts/sm64/pkg/: sm64.us.js
maketools/: xor.py
rust_crypto/: Cargo.toml  SM64 0 Star.m64
rust_crypto/main/: Cargo.toml
rust_crypto/main/src/: blockchain.rs  main copy.rs  main.rs  use_exes.rs
rust_crypto/main/src/blockchain/: use_exes.rs
rust_crypto/sm64/: evaluate.rs  mod.rs  record.rs
rust_crypto/sm64/evaluate/: Cargo.toml
rust_crypto/sm64/evaluate/src/: main.rs
rust_crypto/sm64/record/: Cargo.toml
rust_crypto/sm64/record/src/: main.rs
rust_crypto/sm64/sm64_so/: Cargo.toml
rust_crypto/sm64/sm64_so/src/: constants.rs  game.rs  lib.rs  replay.rs  sm64_structs.rs  util.rs
shared/: Cargo.toml
shared/src/: blockchain.rs  blockchain_client.rs  config.rs  lib.rs
shared/src/blockchain/: use_exes.rs
shared/src/blockchain_client/: blockchain.rs
sm64-port/: Makefile
sm64-port/src/engine/: behavior_script.c  math_util.c  math_util.h
sm64-port/src/pc/: configfile.c  configfile.h  pc_main.c  random_action.c  random_action.h
sm64-port/src/pc/audio/: audio_alsa.c
sm64-port/src/pc/controller/: controller_entry_point.c  controller_keyboard.c  controller_recorded_tas.c  controller_recorded_tas.h  controller_sdl.c
sm64-port/src/pc/gfx/: gfx_dummy.h  gfx_glx.c  gfx_opengl.c  gfx_pc.c  gfx_sdl2.c  gfx_window_manager_api.h
sm64game/sm64-port/: Makefile  awesome2.m64
sm64game/sm64-port/src/engine/: behavior_script.h
sm64game/sm64-port/src/game/: camera.h  game_init.c  level_update.h
sm64game/sm64-port/src/pc/: configfile.c  configfile.h  pc_main.c  ultra_reimplementation.c
sm64game/sm64-port/src/pc/audio/: audio_alsa.c  audio_pulse.c  audio_sdl.c
sm64game/sm64-port/src/pc/controller/: controller_entry_point.c  controller_keyboard.c  controller_recorded_tas.c  controller_recorded_tas.h  controller_sdl.c
sm64game/sm64-port/src/pc/gfx/: gfx_dummy.c  gfx_dxgi.cpp  gfx_glx.c  gfx_pc.c  gfx_pc.h  gfx_sdl2.c
wasm-test/: Cargo.toml  gameplay.py  main.py
wasm-test/src/: main.rs  sm64.rs  sm64_util.rs
web/: index.html  index.js  solution_22.js
