[workspace]
members = ["shared", "cli", "browser-wasm"]

resolver="3"

[workspace.dependencies]
# we define iroh dependencies here to make upgrading easier.
iroh = "0.94.0"
iroh-blobs = "0.96.0"


iroh-gossip = "0.94.0"
iroh-base = "0.94.1"
n0-snafu = "0.2.1"
n0-future = "0.3.0"
tokio = "1.47.1"
anyhow = "1.0.100"