[workspace]
members = ["blockchain", "cli", "browser-wasm"]

resolver="3"

[workspace.dependencies]
# we define iroh dependencies here to make upgrading easier.
iroh = "0.95.1"
iroh-blobs = "0.97.0"


iroh-gossip = "0.95.0"
iroh-base = "0.95.1"
n0-snafu = "0.2.1"
n0-future = "0.3.1"
tokio = "1.47.1"
anyhow = "1.0.100"