[workspace]
members = ["blockchain", "cli", "browser-wasm"]

resolver="3"

[workspace.dependencies]
# we define iroh dependencies here to make upgrading easier.

iroh = { version = "0.95.1", default-features = false }
iroh-tickets = "0.2"
iroh-gossip = { version = "0.95.0", default-features = false, features = ["net"] }
iroh-blobs = { version = "0.97.0", default-features = false }

n0-snafu = "0.2.1"
n0-future = "0.3.1"
anyhow = "1.0.100"