[package]
name = "sm64-blockchain"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
iroh = { workspace = true }
iroh-tickets = { workspace = true }
iroh-gossip = { workspace = true, default-features = false, features = ["net"] }
iroh-blobs = { workspace = true, default-features = false }
tokio = { version = "1", default-features = false, features = ["sync"] }

bytes = "1.10.1"
chrono = { version = "0.4.42" , features = ["serde"] }
futures-lite = "2.6.1"
hex = "0.4.3"
n0-future = { workspace = true }
postcard = "1.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_arrays = "0.2.0"
sha2 = "0.10.9"
snafu = "0.8.8"
n0-snafu = "0.2.1"
anyhow = "1.0.100"
mainline = "6.0.0"
rand = "0.9.2"
sm64-binds = { version = "1.0.11", default-features = false }
serde_json = "1.0.145"
data-encoding = "2.9.0"
tracing = "0.1.41"


[features]
default = ["sm64-binds/default", "fs" ]
fs = ["iroh-blobs/fs-store"]
wasm_js = ["sm64-binds/wasm_js"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory"]
