[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
sm64-crypto-shared = { version = "0.1.0", path = "../shared" }
clap = { version = "4.5.47", features = ["derive"] }
ctrlc = "3.4.7"
snafu = "0.8.8"
tempfile = "3.23.0"
tracing-subscriber = "0.3.20"
iroh = "0.91.2"
iroh-blobs = "0.93.0"
iroh-gossip = "0.91.0"
iroh-base = "0.93.0"
n0-snafu = "0.2.1"
tokio = "1.47.1"
anyhow = "1.0.100"
n0-future = "0.3.0"
