[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
sm64-blockchain = { version = "0.1.0", path = "../blockchain" }
clap = { version = "4.5.47", features = ["derive"] }
ctrlc = "3.4.7"
snafu = "0.8.8"
tempfile = "3.23.0"
tracing-subscriber = "0.3.20"
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-gossip = { workspace = true }
iroh-base =  { workspace = true }
n0-snafu = { workspace = true }
n0-future = { workspace = true }

tokio = "1.47.1"
anyhow = "1.0.100"

