[package]
name = "sm64-crypto-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = { version = "1", package = "iroh-blake3" }
hex = "0.4"
iroh = { workspace = true }
iroh-tickets = { workspace = true }
iroh-gossip = { workspace = true, default-features = false, features = ["net"] }
n0-future = "0.3"
postcard = "1.1.1"
rand = "0.9.2"
serde = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1"


bytes = "1.10.1"
chrono = { version = "0.4.42" , features = ["serde"] }
futures-lite = "2.6.1"
serde_arrays = "0.2.0"
iroh-blobs.workspace = true


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory"]
