[package]
name = "sm64-crypto-shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]

bytes = "1.10.1"
chrono = { version = "0.4.42" , features = ["serde"] }
distributed-topic-tracker = "0.2.4"
futures-lite = "2.6.1"
hex = "0.4.3"
n0-future = { workspace = true }
postcard = "1.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_arrays = "0.2.0"
sha2 = "0.10.9"
snafu = "0.8.8"
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-gossip = { workspace = true }
iroh-base = { workspace = true }
n0-snafu = "0.2.1"
tokio = "1.47.1"
anyhow = "1.0.100"
mainline = "6.0.0"
rand = "0.9.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory"]
